--- a/Login/Login.vbproj
+++ b/Login/Login.vbproj
@@ -138,6 +138,12 @@
     <Compile Include="accountcreationlow.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="requestapproval.Designer.vb">
+      <DependentUpon>requestapproval.vb</DependentUpon>
+    </Compile>
+    <Compile Include="requestapproval.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Student.Designer.vb">
       <DependentUpon>Student.vb</DependentUpon>
     </Compile>
@@ -185,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="accountcreationlow.resx">
       <DependentUpon>accountcreationlow.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="requestapproval.resx">
+      <DependentUpon>requestapproval.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Student.resx">
       <DependentUpon>Student.vb</DependentUpon>
