--- a/Login/Login.vbproj
+++ b/Login/Login.vbproj
@@ -125,6 +125,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addscheduleadmin.Designer.vb">
+      <DependentUpon>addscheduleadmin.vb</DependentUpon>
+    </Compile>
+    <Compile Include="addscheduleadmin.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Login.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="addscheduleadmin.resx">
+      <DependentUpon>addscheduleadmin.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
     </EmbeddedResource>
