--- a/Login/Login.vbproj
+++ b/Login/Login.vbproj
@@ -125,6 +125,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountManagement.Designer.vb">
+      <DependentUpon>AccountManagement.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AccountManagement.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="addscheduleadmin.Designer.vb">
       <DependentUpon>addscheduleadmin.vb</DependentUpon>
     </Compile>
@@ -192,6 +198,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AccountManagement.resx">
+      <DependentUpon>AccountManagement.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="addscheduleadmin.resx">
       <DependentUpon>addscheduleadmin.vb</DependentUpon>
     </EmbeddedResource>
