--- a/Login/Login.vbproj
+++ b/Login/Login.vbproj
@@ -137,6 +137,12 @@
     <Compile Include="addscheduleadmin.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="DeleteFeedbackReport.Designer.vb">
+      <DependentUpon>DeleteFeedbackReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="DeleteFeedbackReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Login.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,13 @@
     <Compile Include="roomlist.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UniversalDim.vb" />
+    <Compile Include="ViewFeedbackReport.Designer.vb">
+      <DependentUpon>ViewFeedbackReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ViewFeedbackReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AccountManagement.resx">
@@ -203,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="addscheduleadmin.resx">
       <DependentUpon>addscheduleadmin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeleteFeedbackReport.resx">
+      <DependentUpon>DeleteFeedbackReport.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
@@ -230,6 +246,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="roomlist.resx">
       <DependentUpon>roomlist.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewFeedbackReport.resx">
+      <DependentUpon>ViewFeedbackReport.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
